--- a/css/_base.scss
+++ b/css/_base.scss
@@ -14,26 +14,33 @@ $gris-oscuro-2: #5c5c5c;
 html {
     box-sizing: border-box;
     font-size: 62.5%; /*1rem = 10px*/
+    overflow-x: hidden;
 }
 
 *, *:before, *:after {
-box-sizing: inherit;
+    box-sizing: inherit;
 }
 
 body{
     background-color: $negro;
     color: $blanco;
+    margin: 0rem;
+    padding: 0rem;
     font-family: $fuente-principal;
     font-size: 1.6rem;
 }
 
 
 // Globales
-a {
-    text-decoration: none;
+h1,h2,h3,h4,h5,h6{
+    margin: 0rem;
+    padding: 0rem;
 }
-ul{
-    list-style: none;
+li{
+    list-style: none; 
+}
+a{
+    text-decoration: none;
 }
 
 
