--- a/css/_contenido-principal.scss
+++ b/css/_contenido-principal.scss
@@ -11,21 +11,23 @@ $gris: #ababab;
 $gris-oscuro: #9e9e9e;
 $gris-oscuro-2: #5c5c5c;
 
-// Mixins 
+// Mixins
 @mixin boton(){
-    padding: 1.7rem;
+    background-color: $negro;
+    width: 21.6rem;
+    padding: 1.8rem;
     border: .2rem solid $naranja;
     border-radius: 3.6rem;
     font-size: 1.8rem;
     font-weight: 400;
-    background-color: $negro;
+    text-transform: uppercase;
     color: $naranja;
-    transition: all 800ms;
+    transition: all 600ms;
     box-shadow: 3px 3px 4.5px $gris-oscuro-2;
 }
 
 @mixin boton-hover(){
-    box-shadow: 3px 3px 6px $negro inset;
+    box-shadow: 4.5px 4.5px 3px $negro inset, -2.5px -2.5px 4px $negro inset;
     background-color: $naranja;
     color: $negro;
     cursor: pointer;
@@ -33,35 +35,47 @@ $gris-oscuro-2: #5c5c5c;
 
 .content{
     width: 100vw;
-    height: 90vh;
+    height: auto;
 
     .wrap-content{
-        width: min(95%, 120rem); /* = a: width: 90%; max-width:120rem;*/
-        margin: 0 auto;
+        width: min(100%, 120rem); /* = a: width: 90%; max-width:120rem;*/
         height: 100%;
+        margin: 4.5rem auto;
 
         display: grid;
-        grid-template-columns: 50% 50%;
-        align-items: center;
+        grid-template-columns: repeat(2, 1fr);
+        align-items: end;
 
-        .img-perfil{
-            padding-right: 4.7rem;
-            padding-bottom: 6.5rem;
+        .perfil{
+            width: 100%;
+            height: 100%;
 
             display: flex;
             justify-content: flex-end;
+            align-items: center;
             
-            img{
-                width: 32rem;
-                height: 32rem;
-                border-radius: 50%;
-                border: .8rem solid $naranja;
-                
+            .img-perfil{
+                width: 32.2rem;
+                height: 32.2rem;
+                margin-right: 4.3rem;
+                margin-bottom: 6.5rem;
+    
+                display: flex;
+                justify-content: flex-end;
+    
+                img{
+                    width: 100%;
+                    height: auto;
+                    border-radius: 50%;
+                    border: .8rem solid $naranja;
+    
+                }
+    
             }
-            
         }
 
         .info{
+            width: 100%;
             height: 41rem;
             padding-right: 4.7rem;
             margin-top: 5.5rem;
@@ -74,7 +88,7 @@ $gris-oscuro-2: #5c5c5c;
                 font-weight: 400;
                 font-family: 'Open Sans', sans-serif;
                 text-transform: uppercase;
-                
+
             }
 
             .titulo{
@@ -106,7 +120,87 @@ $gris-oscuro-2: #5c5c5c;
             .btn:hover{
                 @include boton-hover();
             }
+
+        }
+    }
+}
+
+// Responsive
+@media (max-width: 992px){
+
+    .content{
+
+        .wrap-content{
+            height: auto;
+            margin: 0rem;
+            padding: 0rem;
             
+            grid-template-rows: repeat(2, 1fr);
+    
+            .perfil{
+                width: 80%;
+                margin: 0rem auto;
+                margin-top: 5.8rem;
+
+                grid-column: 1 / 3;
+                justify-content: center;
+                align-items: center;
+    
+                .img-perfil {
+                    width: 28.2rem;
+                    height: 28.2rem;
+                    margin: 0rem;
+                    padding: 0rem;
+
+                }
+            }
+            .info{
+                grid-column: 1 / 3;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                
+                width: 80%;
+                height: auto;
+                margin: 0rem auto;
+                padding: 0rem;
+                text-align: center;
+
+                .hola, .titulo, .info-text{
+                    margin: 0rem;
+                    padding: 0rem;
+                }
+            }
+        }
+
+    }
+}
+
+@media (max-width: 768px){
+    .content{
+
+        .wrap-content{
+            background-color: red;
+    
+            .perfil{
+                background-color: lightgreen;
+                width: 90%;
+                margin-top: 0rem;
+
+                .img-perfil {
+                    width: 22.2rem;
+                    height: 22.2rem;
+                    margin: 0rem;
+                    padding: 0rem;
+
+                }
+            }
+
+            .info{
+                background-color: lightblue;
+                width: 90%;
+                
+            }
         }
     }
 }
