--- a/css/styles.css
+++ b/css/styles.css
@@ -1,48 +1,120 @@
+@charset "UTF-8";
 .header {
   width: 100vw;
-  height: auto;
-}
-.header .wrap {
-  width: 100%;
-  height: 7rem;
-  display: grid;
-  grid-template-columns: 40% 60%;
-  align-items: center;
-}
-.header .wrap .logo {
-  height: 7rem;
-  padding-left: 5rem;
+  height: 8rem;
   display: flex;
   align-items: center;
 }
-.header .wrap .logo p {
-  font-size: 2.5rem;
-  font-weight: 700;
+.header .brand {
+  text-align: center;
   text-transform: uppercase;
+  font-size: 2.8rem;
+  font-weight: 700;
+  flex-grow: 1;
+  flex-basis: 15%;
 }
-.header .wrap .logo p .span {
+.header .brand .span {
   color: #ffb400;
+  margin-left: 0rem;
 }
-.header .wrap .nav ul {
-  width: 100%;
+.header .menu {
+  margin: 0rem;
+  padding: 0rem;
+  flex-grow: 4;
+  flex-basis: 70%;
   display: flex;
-  align-items: center;
-  justify-content: space-around;
+  justify-content: space-evenly;
 }
-.header .wrap .nav ul li {
-  margin-left: -4rem;
-}
-.header .wrap .nav ul li a {
+.header .menu .inicio, .header .menu .usuario, .header .menu .portafolio, .header .menu .habilidades, .header .menu .contacto {
   color: #ffffff;
-  font-size: 1.8rem;
+  font-size: 2rem;
+  display: none;
 }
-.header .wrap .nav ul li a:hover {
+.header .menu li {
+  transition: all 600ms;
+}
+.header .menu li:hover {
+  color: #ffffff;
+}
+.header .menu li a {
+  text-transform: uppercase;
   color: #ffb400;
+  font-size: 1.8rem;
+  font-weight: 600;
+}
+.header .menu-responsive {
+  color: #ffffff;
+  font-size: 3rem;
+  cursor: pointer;
+  display: none;
+  flex-grow: 1;
+  flex-basis: 15%;
+}
+.header .menu-responsive #abrir_menu, .header .menu-responsive #cerrar_menu {
+  cursor: pointer;
 }
 
+@media (max-width: 992px) {
+  .header .brand {
+    font-size: 2.6rem;
+  }
+  .header .menu li a {
+    font-size: 1.7rem;
+  }
+}
+@media (max-width: 768px) {
+  .header .brand {
+    font-size: 2.4rem;
+    padding-left: 5rem;
+    display: flex;
+    justify-content: flex-start;
+  }
+  .header .menu {
+    background-color: #252525;
+    width: 100vw;
+    height: 100vh;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    transform: translateX(-100%);
+    transition: transform 0.6s ease-in-out; /* Ajusta la duración según tus necesidades */
+    padding-top: 6rem;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+  }
+  .header .menu li {
+    width: 100%;
+    border-bottom: 1px solid #111111;
+    padding: 2rem 0rem 2rem 3rem;
+    display: flex;
+  }
+  .header .menu li a {
+    font-size: 2.5rem;
+    display: flex;
+  }
+  .header .menu li .inicio, .header .menu li .usuario, .header .menu li .portafolio, .header .menu li .habilidades, .header .menu li .contacto {
+    display: block;
+    margin-right: 4rem;
+    font-size: 2.5rem;
+    cursor: pointer;
+  }
+  .header .mostrar_menu {
+    transform: translateX(0%);
+    transition: transform 0.6s ease-in-out; /* Ajusta la duración según tus necesidades */
+  }
+  .header .menu-responsive {
+    padding-right: 5rem;
+    z-index: 1;
+    display: flex;
+    justify-content: flex-end;
+  }
+}
 html {
   box-sizing: border-box;
   font-size: 62.5%; /*1rem = 10px*/
+  overflow-x: hidden;
 }
 
 *, *:before, *:after {
@@ -52,43 +124,60 @@ html {
 body {
   background-color: #111111;
   color: #ffffff;
+  margin: 0rem;
+  padding: 0rem;
   font-family: "Poppins", sans-serif;
   font-size: 1.6rem;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  margin: 0rem;
+  padding: 0rem;
+}
+
+li {
+  list-style: none;
 }
 
 a {
   text-decoration: none;
 }
 
-ul {
-  list-style: none;
-}
-
 .content {
   width: 100vw;
-  height: 90vh;
+  height: auto;
 }
 .content .wrap-content {
-  width: min(95%, 120rem); /* = a: width: 90%; max-width:120rem;*/
-  margin: 0 auto;
+  width: min(100%, 120rem); /* = a: width: 90%; max-width:120rem;*/
   height: 100%;
+  margin: 4.5rem auto;
   display: grid;
-  grid-template-columns: 50% 50%;
+  grid-template-columns: repeat(2, 1fr);
+  align-items: end;
+}
+.content .wrap-content .perfil {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: flex-end;
   align-items: center;
 }
-.content .wrap-content .img-perfil {
-  padding-right: 4.7rem;
-  padding-bottom: 6.5rem;
+.content .wrap-content .perfil .img-perfil {
+  width: 32.2rem;
+  height: 32.2rem;
+  margin-right: 4.3rem;
+  margin-bottom: 6.5rem;
   display: flex;
   justify-content: flex-end;
 }
-.content .wrap-content .img-perfil img {
-  width: 32rem;
-  height: 32rem;
+.content .wrap-content .perfil .img-perfil img {
+  width: 100%;
+  height: auto;
   border-radius: 50%;
   border: 0.8rem solid #ffb400;
 }
 .content .wrap-content .info {
+  width: 100%;
   height: 41rem;
   padding-right: 4.7rem;
   margin-top: 5.5rem;
@@ -122,21 +211,81 @@ ul {
 }
 .content .wrap-content .info .btn {
   margin-top: 2rem;
-  padding: 1.7rem;
+  background-color: #111111;
+  width: 21.6rem;
+  padding: 1.8rem;
   border: 0.2rem solid #ffb400;
   border-radius: 3.6rem;
   font-size: 1.8rem;
   font-weight: 400;
-  background-color: #111111;
+  text-transform: uppercase;
   color: #ffb400;
-  transition: all 800ms;
+  transition: all 600ms;
   box-shadow: 3px 3px 4.5px #5c5c5c;
 }
 .content .wrap-content .info .btn:hover {
-  box-shadow: 3px 3px 6px #111111 inset;
+  box-shadow: 4.5px 4.5px 3px #111111 inset, -2.5px -2.5px 4px #111111 inset;
   background-color: #ffb400;
   color: #111111;
   cursor: pointer;
+}
+
+@media (max-width: 992px) {
+  .content .wrap-content {
+    height: auto;
+    margin: 0rem;
+    padding: 0rem;
+    grid-template-rows: repeat(2, 1fr);
+  }
+  .content .wrap-content .perfil {
+    width: 80%;
+    margin: 0rem auto;
+    margin-top: 5.8rem;
+    grid-column: 1/3;
+    justify-content: center;
+    align-items: center;
+  }
+  .content .wrap-content .perfil .img-perfil {
+    width: 28.2rem;
+    height: 28.2rem;
+    margin: 0rem;
+    padding: 0rem;
+  }
+  .content .wrap-content .info {
+    grid-column: 1/3;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 80%;
+    height: auto;
+    margin: 0rem auto;
+    padding: 0rem;
+    text-align: center;
+  }
+  .content .wrap-content .info .hola, .content .wrap-content .info .titulo, .content .wrap-content .info .info-text {
+    margin: 0rem;
+    padding: 0rem;
+  }
+}
+@media (max-width: 768px) {
+  .content .wrap-content {
+    background-color: red;
+  }
+  .content .wrap-content .perfil {
+    background-color: lightgreen;
+    width: 90%;
+    margin-top: 0rem;
+  }
+  .content .wrap-content .perfil .img-perfil {
+    width: 22.2rem;
+    height: 22.2rem;
+    margin: 0rem;
+    padding: 0rem;
+  }
+  .content .wrap-content .info {
+    background-color: lightblue;
+    width: 90%;
+  }
 }
 
 /*# sourceMappingURL=styles.css.map */
