--- a/css/_contenido-principal.scss
+++ b/css/_contenido-principal.scss
@@ -35,11 +35,11 @@ $gris-oscuro-2: #5c5c5c;
 
 .content{
     width: 100vw;
-    height: auto;
+    height: 80vh;
 
     .wrap-content{
         width: min(100%, 120rem); /* = a: width: 90%; max-width:120rem;*/
-        height: 100%;
+        height: auto;
         margin: 4.5rem auto;
 
         display: grid;
@@ -57,8 +57,8 @@ $gris-oscuro-2: #5c5c5c;
             .img-perfil{
                 width: 32.2rem;
                 height: 32.2rem;
-                margin-right: 4.3rem;
-                margin-bottom: 6.5rem;
+                margin-right: 4.4rem;
+                margin-top: 8rem;
     
                 display: flex;
                 justify-content: flex-end;
@@ -76,23 +76,23 @@ $gris-oscuro-2: #5c5c5c;
 
         .info{
             width: 100%;
-            height: 41rem;
+            height: 100%;
+            padding-top: 10.5rem;
             padding-right: 4.7rem;
-            margin-top: 5.5rem;
 
             .hola{
                 margin-top: 0rem;
                 margin-bottom: 0rem;
                 color: #eee;
-                font-size: 22px;
-                font-weight: 400;
+                font-size: 2.2rem;
+                font-weight: 600;
                 font-family: 'Open Sans', sans-serif;
                 text-transform: uppercase;
 
             }
 
             .titulo{
-                font-size: 4.5rem;
+                font-size: 4.2rem;
                 line-height: 6.2rem;
                 font-weight: 700;
                 font-family: $fuente-principal;
@@ -126,12 +126,33 @@ $gris-oscuro-2: #5c5c5c;
 }
 
 // Responsive
+@media (max-width: 1200px){
+
+    .content .wrap-content .info{
+        .titulo{
+            font-size: 4rem;
+        }
+    }
+}
+@media (max-width: 1162px){
+
+    .content .wrap-content .perfil{
+        padding-bottom: 5rem;
+
+    }
+
+    .content .wrap-content .info{
+        .titulo{
+            font-size: 3.7rem;
+        }
+    }
+}
+
 @media (max-width: 992px){
 
     .content{
 
         .wrap-content{
-            height: auto;
             margin: 0rem;
             padding: 0rem;
             
@@ -139,8 +160,10 @@ $gris-oscuro-2: #5c5c5c;
     
             .perfil{
                 width: 80%;
+                height: 100%;
                 margin: 0rem auto;
                 margin-top: 5.8rem;
+                padding-bottom: 0rem;
 
                 grid-column: 1 / 3;
                 justify-content: center;
@@ -161,10 +184,14 @@ $gris-oscuro-2: #5c5c5c;
                 align-items: center;
                 
                 width: 80%;
-                height: auto;
+                height: 100%;
                 margin: 0rem auto;
                 padding: 0rem;
                 text-align: center;
+
+                .titulo{
+                    font-size: 3.4rem;
+                }
 
                 .hola, .titulo, .info-text{
                     margin: 0rem;
@@ -180,12 +207,11 @@ $gris-oscuro-2: #5c5c5c;
     .content{
 
         .wrap-content{
-            background-color: red;
-    
+            max-height: 90vh;
             .perfil{
-                background-color: lightgreen;
-                width: 90%;
-                margin-top: 0rem;
+                width: 100%;
+                max-height: 26.5rem;
+                margin-top: 2rem;
 
                 .img-perfil {
                     width: 22.2rem;
@@ -197,10 +223,71 @@ $gris-oscuro-2: #5c5c5c;
             }
 
             .info{
-                background-color: lightblue;
-                width: 90%;
+                width: 100%;
+                padding: 0rem 2.6rem;
+                .titulo{
+                    font-size: 3rem;
+                }
                 
             }
+        }
+    }
+}
+
+@media (max-width: 600px){
+    .content .wrap-content{
+        max-height: 70vh;
+        .info {
+            .titulo{
+                font-size: 3rem;
+            }
+        }
+    }
+     
+} 
+
+// Small devices (landscape phones, 576px and up)
+@media (max-width: 576px) {
+    .content .wrap-content .info {
+        align-items: flex-start;  
+        
+        .info-text{
+            text-align: start;
+        }
+
+        .btn{
+            font-size: 1.6rem;
+        }
+    }
+}
+
+
+@media (max-width: 500px){
+    .content .wrap-content .info .titulo{
+        font-size: 2.8rem;
+    }
+}
+
+@media (max-width: 400px){
+    .content .wrap-content .info{
+        .hola{
+            font-size: 2rem;
+        }
+        .titulo{
+            font-size: 2.2rem;
+        }
+    } 
+}
+
+@media (max-width: 330px){
+    .content .wrap-content .info{
+
+        .hola{
+            font-size: 1.6rem;
+        }
+
+        .titulo{
+            font-size: 1.8rem;
         }
     }
 }
